Починил тени на iphone

--- a/source/improvement-fork-1.html
+++ b/source/improvement-fork-1.html
@@ -21,11 +21,10 @@
                     публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также
                     известен как текст- заполнитель или же текст-наполнитель. Иногда текст- «рыба» также</h1>
                 <div class="improvement-fork__status-container">
-                    <p>Статус: <span
-                            class="improvement-fork__status improvement__item-status improvement__item-status--orange">Идет
+                    <p>Статус: <span class="improvement-fork__status improvement-status improvement-status--orange">Идет
                             прием
                             заявок</span></p>
-                    <p>Прием заявок<span class="improvement-fork__date">с 20.08.2020 по 20.11.2020</span></p>
+                    <p>Прием заявок <span class="improvement-fork__date">с 20.08.2020 по 20.11.2020</span></p>
                 </div>
                 <p class="improvement-fork__text main-text">Рыбные тексты также применяются для демонстрации различных
                     видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей
