--- a/source/improvement-fork-4.html
+++ b/source/improvement-fork-4.html
@@ -7,8 +7,8 @@
 
     <include src="source/components/header.html"></include>
 
-    <main>
-        <section class="improvement-fork improvement-fork4 section">
+    <main class="improvement-fork-4">
+        <section class="improvement-fork section">
             <div class="container">
                 <a class="improvement-fork__back back-btn" href="main-page.html">
                     <svg width="8" height="14">
@@ -21,11 +21,9 @@
                     публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также
                     известен как текст- заполнитель или же текст-наполнитель. Иногда текст- «рыба» также</h1>
                 <div class="improvement-fork__status-container">
-                    <p>Статус: <span
-                            class="improvement-fork__status improvement__item-status improvement__item-status--orange">Идет
-                            прием
-                            заявок</span></p>
-                    <p>Прием заявок<span class="improvement-fork__date">с 20.08.2020 по 20.11.2020</span></p>
+                    <p>Статус: <span class="improvement-fork__status improvement-status">
+                            Подведены итоги</span></p>
+                    <p>Период голосования: <span class="improvement-fork__date">20.08.2020 по 20.11.2020</span></p>
                 </div>
                 <p class="improvement-fork__text main-text">Рыбные тексты также применяются для демонстрации различных
                     видов шрифта и в разработке макетов. Как правило их содержание бессмысленно. По причине своей
@@ -38,54 +36,62 @@
         </section>
         <section class="proposal-winners">
             <div class="container">
-                <h2>Предложения-победители</h2>
+                <h2 class="proposal-winners__title">Предложения-победители</h2>
                 <ul class="proposal-winners__list">
                     <li class="proposal-winners__item">
-                        <a class="link link--black" href="#">
+                        <a class="proposal-winners__text-link proposal-winners__text-link--yours link link--black"
+                            href="#">
                             Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях
                         </a>
-                        <p class="proposal-winners__status">Реализовано</p>
+                        <p class="proposal-winners__status improvement-status">Реализовано</p>
                     </li>
                     <li class="proposal-winners__item">
-                        <a class="link link--black" href="#">
+                        <a class="proposal-winners__text-link proposal-winners__text-link--yours link link--black"
+                            href="#">
                             Они напевают его перед тем, как сочинены соответствующие слова
                         </a>
                     </li>
                     <li class="proposal-winners__item">
-                        <a class="link link--black" href="#">
+                        <a class="proposal-winners__text-link proposal-winners__text-link--yours link link--black"
+                            href="#">
                             Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или
                             производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как
                             текст-заполнитель или же текст-наполнитель. Иногда текст-«рыба» также
                         </a>
-                        <p class="proposal-winners__status">Реализовано</p>
+                        <p class="proposal-winners__status improvement-status"">Реализовано</p>
                     </li>
-                    <li class="proposal-winners__item">
-                        <a class="link link--black" href="#">
-                            Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях
-                        </a>
+                    <li class=" proposal-winners__item">
+                            <a class="proposal-winners__text-link proposal-winners__text-link--yours link link--black"
+                                href="#">
+                                Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях
+                            </a>
                     </li>
                     <li class="proposal-winners__item">
                         <p class="proposal-winners_yours">Ваше предложение</p>
                         <p class="proposal-winners__address">Константина Симонова, 5к2</p>
-                        <a class="link link--black" href="#">
+                        <a class="proposal-winners__text-link proposal-winners__text-link--yours link link--black"
+                            href="#">
                             Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях
                         </a>
-                        <p class="proposal-winners__status">Реализовано</p>
+                        <p class="proposal-winners__status improvement-status">Реализовано</p>
                     </li>
                     <li class="proposal-winners__item">
-                        <a class="link link--black" href="#">
+                        <a class="proposal-winners__text-link proposal-winners__text-link--yours link link--black"
+                            href="#">
                             Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке
                         </a>
                     </li>
                     <li class="proposal-winners__item">
-                        <a class="link link--black" href="#">
+                        <a class="proposal-winners__text-link proposal-winners__text-link--yours link link--black"
+                            href="#">
                             Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или
                             производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как
                             текст-заполнитель или же текст-наполнитель. Иногда текст-«рыба» также
                         </a>
                     </li>
                     <li class="proposal-winners__item">
-                        <a class="link link--black" href="#">
+                        <a class="proposal-winners__text-link proposal-winners__text-link--yours link link--black"
+                            href="#">
                             Они напевают его перед тем, как сочинены соответствующие слова
                         </a>
                     </li>
