--- a/source/main-page.html
+++ b/source/main-page.html
@@ -638,32 +638,32 @@
       </div>
       <div class="improvement__list">
         <div class="improvement__item">
-          <p class="improvement__item-status improvement__item-status--orange">Идет прием заявок</p>
+          <p class="improvement-status improvement-status--orange">Идет прием заявок</p>
           <a class="improvement__text link link--black" href="#">
             Рыбным текстом называется текст, служащий для временного наполнения макета
           </a>
         </div>
         <div class="improvement__item">
-          <p class="improvement__item-status improvement__item-status--blue">Голосование открыто</p>
+          <p class="improvement-status improvement-status--blue">Голосование открыто</p>
           <a class="improvement__text link link--black" href="#">
             Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве
             веб-сайтов, пока финальный текст еще не создан
           </a>
         </div>
         <div class="improvement__item">
-          <p class="improvement__item-status">Подведены итоги</p>
+          <p class="improvement-status">Подведены итоги</p>
           <a class="improvement__text link link--black" href="#">
             Они напевают его перед тем, как сочинены соответствующие слова
           </a>
         </div>
         <div class="improvement__item">
-          <p class="improvement__item-status">Подведены итоги</p>
+          <p class="improvement-status">Подведены итоги</p>
           <a class="improvement__text link link--black" href="#">
             Уже в 16-том веке рыбные тексты имели широкое распространение у печатников
           </a>
         </div>
         <div class="improvement__item">
-          <p class="improvement__item-status">Подведены итоги</p>
+          <p class="improvement-status">Подведены итоги</p>
           <a class="improvement__text link link--black" href="#">
             Самый известный текст-«рыба», называемый Lorem ipsum, имеет свои корни в 16-том веке
           </a>
