убирает ошибки валидатора и доступности

--- a/source/proposal-page-approved.html
+++ b/source/proposal-page-approved.html
@@ -176,8 +176,8 @@
             <span>Константина Симонова, 5к2</span>
           </a>
           <iframe
-            src="https://yandex.ru/map-widget/v1/?um=constructor%3A632dc64482e20035a9e82717af6071fd69e61f588fe2400013fa13d65e070cb6&amp;source=constructor"
-            width="740" height="400"></iframe>
+            src="https://yandex.ru/map-widget/v1/?um=constructor%3A632dc64482e20035a9e82717af6071fd69e61f588fe2400013fa13d65e070cb6&amp;source=constructor" title="Интерактивная карта">
+          </iframe>
           <a class="button button--light-blue" href="#">
             <span>к списку предложений</span>
           </a>
