баги на странице формы 4

--- a/source/proposal-page-approved.html
+++ b/source/proposal-page-approved.html
@@ -55,9 +55,30 @@
           </div>
           <h2 class="proposal__subtitle">Изображения</h2>
           <div
-            class="project-page__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+            class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
             style="cursor: grab;">
             <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
+              <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
+                <a class="gallery__item-link js-gallery__item-link" href="img/img-project/1.jpg" target="_blank"
+                  aria-label="описание картинки" data-index="0">
+                  <figure class="gallery__item">
+                    <img width="135" height="135" class="gallery__item-img" src="img/img-project/1.jpg"
+                      alt="описание картинки">
+                    <figcaption class="gallery__item-text">
+                      Описание, текст до 500 символов. Рыбным текстом
+                      называется текст, служащий для временного наполнения
+                      макета в публикациях или производстве веб-сайтов, пока
+                      финальный текст еще не создан. Рыбный текст также
+                      известен как текст- заполнитель или. Рыбные тексты также
+                      применяются для демонстрации различных видов шрифта и в
+                      разработке макетов. Как правило их содержание
+                      бессмысленно. По причине своей функции
+                      текста-заполнителя для макетов нечитабельность рыбных
+                      текстов имеет особое значение, во всех.
+                    </figcaption>
+                  </figure>
+                </a>
+              </div>
               <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
                 <a class="gallery__item-link js-gallery__item-link" href="img/img-project/1.jpg" target="_blank"
                   aria-label="описание картинки" data-index="0">
