баги на странице формы 8

--- a/source/proposal-page-implemented.html
+++ b/source/proposal-page-implemented.html
@@ -32,7 +32,7 @@
               <span class="project-vote__expire-value">Голосование завершено</span>
             </p>
             <div class="project-vote__like-counter">
-              <span>Проголосовало 504</span>
+              <span>Проголосовало</span>&nbsp;<span class="project-vote__value">504</span>
             </div>
           </div>
         </div>
