--- a/source/proposal-page-declined.html
+++ b/source/proposal-page-declined.html
@@ -24,9 +24,20 @@
         </p>
       </div>
       <section class="proposal proposal--approved">
-        <h1 class="proposal__title page-title">Рыбные тексты также применяются для демонстрации различных видов шрифта и
+        <h1 class="proposal__title proposal__title--declined page-title">Рыбные тексты также применяются для демонстрации различных видов шрифта и
           в разработке макетов. Как правило их содержание бессмысленно.
         </h1>
+        <a class="proposal__link link link--blue link--rules" href="#">
+          <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 24 24">
+            <path fill="currentColor" fill-rule="evenodd"
+              d="M.2 12C.2 5.494 5.492.2 12 .2 18.505.2 23.8 5.494 23.8 12c0 6.506-5.294 11.8-11.8 11.8C5.492 23.8.2 18.506.2 12zm2.152 0c0 5.32 4.328 9.647 9.647 9.647 5.32 0 9.647-4.327 9.647-9.647S17.318 2.354 12 2.354 2.352 6.68 2.352 12z"
+              clip-rule="evenodd" />
+            <rect width="2.5" height="8" x="10.75" y="6" fill="currentColor" rx="1" />
+            <rect width="2.5" height="3" x="10.75" y="15" fill="currentColor" rx="1" />
+          </svg>
+          <span>Правила размещения проектов</span>
+        </a>
           <p class="proposal__text">
             Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как
             правило их содержание бессмысленно. По причине своей функции текста-заполнителя для макетов
@@ -36,7 +47,7 @@
           </p>
           <h2 class="proposal__subtitle">Изображения</h2>
           <div
-            class="project-page__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+            class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
             style="cursor: grab;">
             <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
               <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
