добавляет страницы в index

--- a/source/index.html
+++ b/source/index.html
@@ -98,7 +98,7 @@
           <a href="landscaping.html" target="_blank">Форма создания предложения 1</a>
         </li>
         <li>
-          <a href="proposal-page-2.html" target="_blank">Форма создания предложения 2-3</a>
+          <a href="proposal-warning.html" target="_blank">Форма создания предложения 2-3</a>
         </li>
         <li>
           <a href="proposal-page-approved.html" target="_blank">Форма создания предложения 4</a>
@@ -115,6 +115,12 @@
         <br />
         <li>
           <a href="improvement-fork-1.html" target="_blank">Благоустройство разводящая 1</a>
+        </li>
+        <li>
+          <a href="improvement-moderating.html" target="_blank">Благоустройство разводящая 2</a>
+        </li>
+        <li>
+          <a href="improvement-list.html" target="_blank">Благоустройство разводящая 3</a>
         </li>
         <li>
           <a href="improvement-fork-4.html" target="_blank">Благоустройство разводящая 4</a>
