убирает баг со слайдером

--- a/source/proposal-page-declined.html
+++ b/source/proposal-page-declined.html
@@ -6,7 +6,7 @@
   <include src="source/components/special-popup.html"></include>
   <include src="source/components/header.html"></include>
   <main class="project-page page-content page-content--approved">
-    <div class="container">
+    <div class="container container--desktop-only">
       <div class="info-banner info-banner--declined">
         <svg width="24" height="24" class="info-icon info-banner__icon" xmlns="http://www.w3.org/2000/svg" fill="none"
           viewBox="0 0 24 24">
@@ -167,12 +167,16 @@
             </svg>
             <span>Константина Симонова, 5к2</span>
           </a>
-          <iframe
-            src="https://yandex.ru/map-widget/v1/?um=constructor%3A632dc64482e20035a9e82717af6071fd69e61f588fe2400013fa13d65e070cb6&amp;source=constructor" title="Интерактивная карта">
-          </iframe>
-          <a class="button button--light-blue" href="#">
-            <span>к списку предложений</span>
-          </a>
+          <div class="proposal__map-wrapper">
+            <iframe
+              src="https://yandex.ru/map-widget/v1/?um=constructor%3A632dc64482e20035a9e82717af6071fd69e61f588fe2400013fa13d65e070cb6&amp;source=constructor" title="Интерактивная карта">
+            </iframe>
+          </div>
+          <div class="proposal__button-wrapper">
+            <a class="button button--light-blue" href="#">
+              <span>к списку предложений</span>
+            </a>
+          </div>
       </section>
     </div>
   </main>
