ставит галерею на место

--- a/source/proposal-page-voting.html
+++ b/source/proposal-page-voting.html
@@ -47,7 +47,7 @@
           </div>
           <h2 class="proposal__subtitle">Изображения</h2>
           <div
-            class="project-page__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
+            class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
             style="cursor: grab;">
             <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
               <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
