пп на благоустройство 2 и 3

--- a/source/improvement-list.html
+++ b/source/improvement-list.html
@@ -52,8 +52,8 @@
                       <span class="improvement-stage__status improvement-stage__status--opened">Голосование открыто</span>
                   </div>
                   <div class="area-improvement__dates improvement-stage improvement-stage--line-height">
-                      <span>Приём заявок&nbsp;</span>
-                      <span class="improvement-stage__dates">с 20.08.2020 по 20.11.2020</span>
+                      <span>Период голосования:&nbsp;</span>
+                      <span class="improvement-stage__dates">20.08.2020&nbsp;&mdash;&nbsp;20.11.2020</span>
                   </div>
                 </div>
                 <p class="area-improvement__text main-text">Рыбные тексты также применяются для демонстрации различных
