--- a/source/proposal-warning.html
+++ b/source/proposal-warning.html
@@ -96,12 +96,14 @@
               Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст также известен как текст-заполнитель или же текст-наполнитель. Иногда текст-«рыба» также используется композиторами при написании музыки.
             </p>
           </div>
-          <h2 class="proposal__subtitle">Название и описание предложения</h2>
-          <div class="proposal__description">
-            <p>Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно.</p>
-          </div>
-          <div class="proposal__description proposal__description--padding">
-            <p>В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста на странице (макет или площадь набора). Поэтому большинство рыбных текстов состоят из более или менее произвольного набора слов и слогов.</p>
+          <div class="proposal__description proposal-description">
+            <h2 class="proposal-description__title">Название и описание предложения</h2>
+            <p class="proposal-description__content">
+              Рыбные тексты также применяются для демонстрации различных видов шрифта и в разработке макетов. Как правило их содержание бессмысленно.
+            </p>
+            <p class="proposal-description__content proposal-description__content--padding">
+              В случае произвольного набора букв и длины слов ничто не отвлекает от оценки воздействия и читаемости различных шрифтов, а также от распределения текста на странице (макет или площадь набора). Поэтому большинство рыбных текстов состоят из более или менее произвольного набора слов и слогов.
+            </p>
           </div>
           <form action="#" class="proposal__form landscaping-form" enctype='multipart/form-data'>
             <h2 class="proposal__subtitle">Загрузка изображений</h2>
