--- a/source/landscaping.html
+++ b/source/landscaping.html
@@ -36,7 +36,7 @@
                 на хх символов</span>
             </div>
           </div>
-          <div class="landscaping-form__section upload-section">
+          <!-- <div class="landscaping-form__section upload-section">
             <h2 class="upload-section__title">Загрузка изображений</h2>
             <p class="upload-section__tip">
               Если необходимо, вы можете загрузить изображения. Максимум 5
@@ -45,6 +45,14 @@
             <div class="upload-section__img-wrap js-upload-image-container">
               <input class="visually-hidden" type="file" name="user-images" id="user-images"
                 accept="image/png, image/jpeg, image/jpg, image/gif" multiple="">
+              <label for="user-images"><span>Загрузить изображение</span></label>
+            </div>
+          </div> -->
+          <div class="landscaping-form__section upload-section image-uploads">
+            <h2 class="subtitle">Загрузка изображений</h2>
+            <p>Если необходимо, вы можете загрузить изображения. Максимум 5&nbsp;изображенний, формата JPEG, PNG, GIF.</p>
+            <div class="image-uploads__wrapper js-upload-image-container">
+              <input class="visually-hidden" type="file" name="user-images" id="user-images" accept="image/png, image/jpeg, image/jpg, image/gif" multiple>
               <label for="user-images"><span>Загрузить изображение</span></label>
             </div>
           </div>
