исправляет пп на страницах

--- a/source/proposal-warning.html
+++ b/source/proposal-warning.html
@@ -52,7 +52,7 @@
           </p>
         </div>
         <section class="proposal">
-          <h1 class="proposal__title page-title">Форма предложения по благоустройству территории</h1>
+          <h1 class="proposal__title proposal__title--big page-title">Форма предложения по благоустройству территории</h1>
           <a class="proposal__link link link--blue link--rules" href="#">
             <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none"
               viewBox="0 0 24 24">
