исправляет пп на страницах

--- a/source/proposal-page-declined.html
+++ b/source/proposal-page-declined.html
@@ -48,7 +48,7 @@
           </p>
         </div>
         <div class="proposal__slider">
-          <h2 class="proposal__subtitle">Изображения</h2>
+          <h2 class="subtitle subtitle--large">Изображения</h2>
           <div
             class="proposal__gallery gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal"
             style="cursor: grab;">
@@ -163,7 +163,7 @@
           </div>
         </div>
         <div class="proposal__map">
-          <h2 class="proposal__subtitle proposal__subtitle--map">Карта проблемной территории</h2>
+          <h2 class="subtitle subtitle--large">Карта проблемной территории</h2>
           <a class="proposal__address address-pin" href="#">
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
