--- a/source/proposal-page-implemented.html
+++ b/source/proposal-page-implemented.html
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="proposal__files">
-          <h2 class="proposal__subtitle">Отчеты о реализации предложения</h2>
+          <h2 class="subtitle subtitle--large">Отчеты о реализации предложения</h2>
           <div class="files">
             <a class="file-item" href="#" download>
               <svg width="24" height="24">
@@ -232,7 +232,7 @@
           </p>
         </div>
         <div class="proposal__slider">
-          <h2 class="proposal__subtitle proposal__subtitle--gallery">Изображения</h2>
+          <h2 class="subtitle subtitle--large">Изображения</h2>
           <div class="proposal__gallery proposal__gallery--grid gallery js-gallery swiper-container swiper-container-initialized swiper-container-horizontal" style="cursor: grab;">
             <div class="gallery__tape swiper-wrapper" style="transform: translate3d(0px, 0px, 0px);">
               <div class="swiper-slide swiper-slide-active" style="margin-right: 16px;">
@@ -345,7 +345,7 @@
           </div>
         </div>
         <div class="proposal__map">
-          <h2 class="proposal__subtitle proposal__subtitle--map">Карта проблемной территории</h2>
+          <h2 class="subtitle subtitle--large">Карта проблемной территории</h2>
           <a class="proposal__address address-pin" href="#">
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
