добавляет страницу активность-благоустройство

--- a/source/activity-partners.html
+++ b/source/activity-partners.html
@@ -26,6 +26,9 @@
           <li class="activity-tabs__item">
             <a href="activity-surveys.html" class="activity-tabs__link">Опросы</a>
           </li>
+          <li class="activity-tabs__item">
+            <a href="activity-improvement.html" class="activity-tabs__link">Благоустройство</a>
+          </li>
           <li class="activity-tabs__item activity-tabs__item--active">
             <a href="#" class="activity-tabs__link">На сторонних ресурсах</a>
           </li>
