--- a/source/index.html
+++ b/source/index.html
@@ -88,6 +88,10 @@
           <a href="activity-surveys.html" target="_blank">Активность -- Опросы</a>
         </li>
         <li>
+          <a href="activity-improvement.html" target="_blank">Активность -- Благоустройство
+          </a>
+        </li>
+        <li>
           <a href="activity-partners.html" target="_blank">Активность -- На сторонних ресурсах
           </a>
         </li>
