проверяет страницы на валидаторе

--- a/source/activity-improvement.html
+++ b/source/activity-improvement.html
@@ -36,6 +36,7 @@
       </div>
 
       <section class="activity-improvement">
+        <h2 class="visually-hidden">Список ваших предложений</h2>
         <div class="container">
           <ul class="activity-improvement__list proposal-list">
             <li class="proposal-list__item proposal-list__item--activity-improvement">
