убирает ошибку бэм

--- a/source/proposal-warning.html
+++ b/source/proposal-warning.html
@@ -123,9 +123,9 @@
               <label for="map-search" class="visually-hidden" aria-label="Ввод адреса проблемной территории"></label>
               <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9cb3dfe5638344382497a81fa8472068b0dfbf25654b37a69d276c0dce8d2718&amp;source=constructor" title="Интерактивная карта"></iframe>
             </div>
-            <div class="landscaping-form__button-wrapper">
+            <div class="proposal__button-wrapper">
               <button class="button button--white">Отменить</button>
-              <button type="submit" class="button button--blue landscaping-form__submit-btn">
+              <button type="submit" class="proposal__submit-btn button button--blue">
                 Отправить на модерацию
               </button>
             </div>
